fixed main overlap issue with sidebar

--- a/EVS/EVS-war/web/resources/css/siderbar.css
+++ b/EVS/EVS-war/web/resources/css/siderbar.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
 
 #sidebar {
+       
+    width: 0;
     z-index: 1000;
     position: fixed;
     top: 0;
     bottom: 0;
-    width:250px;
+    width:200px;
     left: 0;
     background: #37474F;
     -webkit-transition: all 0.5s ease;
@@ -13,6 +15,12 @@
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
+
+.active {
+    visibility: visible;
+    width: 250px;
+}
+
 
 #sidebar header {
     background-color: #263238;
